<resources>
    <string name="app_name">AGONGYM</string>
    <string name="welcome_message">ACCESO DEL CLIENTE</string>
    <string name="create_user">CREAR CUENTA</string>
    <string name="signup_button">REGISTRARSE</string>
    <string name="login_button">LOG IN</string>
    <string name="signuphome_button">SIGN UP</string>
    <string name="mail_hint">Correo electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="name_hint">Nombre</string>
    <string name="lastname_hint">Apellidos</string>
    <string name="address1_hint">Calle y número de casa</string>
    <string name="address2_hint">Apartamento, local, etc. (opcional)</string>
    <string name="zipcode_hint">Código postal</string>
    <string name="city_hint">Ciudad</string>
    <string name="province_hint">Província</string>
    <string name="country_hint">País</string>
    <string name="phoneNumber_hint">Teléfono</string>
    <string name="marketing_checkbox">Suscribirse a nuestra newsletter</string>
    <string name="productTextView_title">Name</string>
    <string name="productTextView_price">PRICE</string>
    <string name="productTextView_compareAtPrice">COMPARE AT PRICE</string>
    <string name="minus_button">-</string>
    <string name="plus_button">+</string>
    <string name="addtocart_button">AÑADIR A LA CESTA</string>
    <string name="quantity_textview">1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_collection_nav">CollectionActivityNav</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">¡Bienvenid@ a ΛGONGYM!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_cart">Cart</string>
    <string name="action_whatsapp">WhatsApp</string>

    <string name="menu_men">MEN</string>
    <string name="menu_women">WOMEN</string>
    <string name="menu_accesories">ACCESORIES</string>
    <string name="menu_outlet">OUTLET</string>
    <string name="menu_account">CUENTA</string>
    <string name="menu_login">LOG IN</string>
    <string name="menu_logout">LOG OUT</string>

    <string name="place_order">TERMINAR PEDIDO</string>
    <string name="cart_img_description">Image of the product add cart</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>