<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:icon="@drawable/ic_t_shirt"
            android:fontFamily="@font/montserrat"
            android:id="@+id/nav_man"
            android:title="@string/menu_men" />
        <item
            android:icon="@drawable/ic_t_shirt"
            android:fontFamily="@font/montserrat"
            android:id="@+id/nav_women"
            android:title="@string/menu_women" />
        <item
            android:icon="@drawable/ic_beanie_2"
            android:fontFamily="@font/montserrat"
            android:id="@+id/nav_accessories"
            android:title="@string/menu_accesories" />
        <item
            android:icon="@drawable/ic_t_shirt"
            android:fontFamily="@font/montserrat"
            android:id="@+id/nav_outlet"
            android:title="@string/menu_outlet" />

        <item
            android:fontFamily="@font/montserrat"
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_baseline_account_24"
            android:title="@string/menu_account" />

        <item
            android:fontFamily="@font/montserrat"
            android:id="@+id/nav_log_in"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="@string/menu_login" />

        <item
            android:fontFamily="@font/montserrat"
            android:id="@+id/nav_log_out"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="@string/menu_logout" />





    </group>
</menu>