<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.agongym.store.activities.ProductDetailsActivity">

    <com.denzcoskun.imageslider.ImageSlider
        android:id="@+id/slider"
        android:layout_width="409dp"
        android:layout_height="263dp"
        android:layout_marginTop="1dp"
        android:layout_span="3"
        app:auto_cycle="false"
        app:corner_radius="5"
        app:delay="0"
        app:error_image="@drawable/background_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:placeholder="@drawable/background_grey">

    </com.denzcoskun.imageslider.ImageSlider>

    <TableLayout
        android:layout_width="372dp"
        android:layout_height="402dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/slider">

        <TableRow
            android:layout_width="348dp"
            android:layout_height="match_parent">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="3" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="18dp">

            <Button
                android:id="@+id/buttonMinus"
                android:layout_width="77dp"
                android:layout_height="wrap_content"
                android:text="@string/minus_button" />

            <TextView
                android:id="@+id/quantityTextView"
                android:layout_width="217dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/quantity_textview"
                android:textColor="#000000"
                android:textSize="18sp" />

            <Button
                android:id="@+id/buttonPlus"
                android:layout_width="77dp"
                android:layout_height="wrap_content"
                android:text="@string/plus_button" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonAddToCart"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_span="3"
                android:text="@string/addtocart_button" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="match_parent"
                android:layout_height="274dp"
                android:layout_span="3"
                android:text="TextView" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>