<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="8dp"
    >



    <ImageView
        android:id="@+id/imageview_product_image"
        android:layout_height="170dp"
        android:layout_width="170dp"
        android:scaleType="centerCrop"
        android:layout_marginBottom="10dp"
        />

    <TableLayout
        android:layout_height="85dp"
        android:layout_width="170dp"
        >


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:fontFamily="@font/montserrat"
                android:id="@+id/product_title"
                android:layout_width="170dp"
                android:layout_height="35dp"
                android:layout_span="1"
                android:gravity="center"
                android:text="@string/productTextView_title"
                android:textColor="#020202"
                android:textSize="15sp"
                android:textStyle="bold" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:fontFamily="@font/montserrat"
                android:id="@+id/product_compare_at_price"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:text="@string/productTextView_compareAtPrice"
                android:background="@drawable/strike_through"
                android:textColor="@color/red"
                android:textSize="15dp"
                android:textStyle="bold"

                >

            </TextView>

        </TableRow>




            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:fontFamily="@font/montserrat"
                    android:layout_marginTop="-3dp"
                    android:id="@+id/product_price"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:text="@string/productTextView_price"
                    android:textColor="#3F51B5"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:layout_gravity="center"

                    >
                </TextView>


            </TableRow>






    </TableLayout>





</LinearLayout>