<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.agongym.store.activities.LogInActivity"
    tools:ignore="ExtraText"

    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"


        tools:ignore="MissingConstraints">

        <TableLayout
            android:id="@+id/layout_log_in"
            android:layout_width="350dp"
            android:layout_height="300dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="30dp">

            <TableRow

                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/welcome_textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/welcome_message"
                    android:textColor="#000000"
                    android:textSize="25sp" />

            </TableRow>

            <TableRow

                android:layout_marginTop="30dp"
                android:gravity="center_horizontal">

                <EditText
                    android:id="@+id/editTextTextHomeEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints="username"
                    android:background="@drawable/edit_text_corners"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/mail_hint"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    tools:ignore="LabelFor" />


            </TableRow>

            <TableRow
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal">

                <EditText
                    android:id="@+id/editTextTextHomePassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints="username"
                    android:background="@drawable/edit_text_corners"
                    android:fontFamily="@font/montserrat"
                    android:hint="@string/password_hint"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:password="true"
                    tools:ignore="LabelFor" />

            </TableRow>

            <TableRow

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"


                    >


                    <Button
                        android:id="@+id/login_button"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/login_button" />

                    <Button
                        android:id="@+id/signuphome_button"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="20dp"

                        android:fontFamily="@font/montserrat"
                        android:text="@string/signuphome_button" />
                </LinearLayout>


            </TableRow>


        </TableLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/splash_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/montserrat"
        android:text="BE YOUR BEST "
        android:textColor="@color/black"
        android:textSize="20dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.489" />

    <TextView

        android:id="@+id/skip_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="32dp"
        android:fontFamily="@font/montserrat"
        android:gravity="right"
        android:text="SKIP ➔"
        android:textColor="@color/dark_grey"
        android:textSize="12dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splash_text"
        app:layout_constraintVertical_bias="0.723" />


</androidx.constraintlayout.widget.ConstraintLayout>